--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,8 @@ a {
   text-decoration: none;
 }
 
+/*---------------------------------------------------*/
+
 #welcome {
   background: -webkit-linear-gradient(top, rgb(250, 250, 250) 0%, rgb(209, 208, 216) 100%);
   background: -o-linear-gradient(top, rgb(250, 250, 250) 0%, rgb(209, 208, 216) 100%);
@@ -142,6 +144,8 @@ a {
   padding-left: 5px;
 }
 
+/*---------------------------------------------------*/
+
 #gallery {
   height: 332px;
   padding-top: 32px;
@@ -151,7 +155,8 @@ a {
 .gallery {
   width: 1055px;
   height: 254px;
-  background-color: red;
+  background-color: #ffffff;
+  position: relative;
 }
 
 .gallery-content {
@@ -163,10 +168,12 @@ a {
   width: 338px;
   height: 252px;
   float: left;
+  border: 1px solid #dddddd;
+  padding: 10px;
   font-family: 'Raleway';
-  color: #000000;
-  font-size: 16px;
-  font-weight: 600;
+  color: #565656;
+  font-size: 14px;
+  font-weight: 400;
   line-height: 20.371px;
   text-align: left;
 }
@@ -180,12 +187,83 @@ a {
   line-height: 20.371px;
   text-align: left;
   padding-left: 10px;
+  position: absolute;
+  top: 60%;
+  width: 355px;
+  height: 62px;
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
-#price-list {
-  background: black;
-  height: 725px;
+.galleryh2a {
+  background-color: rgba(255, 255, 255, 0.3);
+  font-family: 'Raleway';
+  color: #000000;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20.371px;
+  text-align: left;
+  padding-left: 10px;
+  position: absolute;
+  top: 5%;
+  width: 355px;
+  height: 62px;
+  padding-left: 10px;
+  padding-top: 10px;
 }
+
+.gallery-article {
+  margin-top: 20%;
+  font-family: 'Raleway';
+  color: #565656;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20.371px;
+  text-align: left;
+}
+
+/*---------------------------------------------------*/
+
+#price-list {
+  background-color: #f1f1f1;
+  height: 725px;
+  padding-top: 66px;
+  padding-left: 66px;
+}
+
+.inner-price-container {
+  background-color: #f1f1f1;
+  width: 1052px;
+  height: 611px;
+  padding-top: 100px;
+}
+
+.price-box {
+  width: 326px;
+  height: 497px;
+  background: black;
+  float:left;
+  margin-left: 20px;
+}
+.price-box.greenbox {
+  width: 326px;
+  height: 497px;
+  background: green;
+  float:left;
+  margin-left: 20px;
+}
+h2.price {
+  font-family: 'Raleway';
+  color:  #575757;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 20.371px;
+  text-align: left;
+  /*margin-top: -100px;*/
+}
+.
+
+/*---------------------------------------------------*/
 
 #form {
   background: green;
