--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,6 +36,7 @@ header {
   float: right;
   text-transform: uppercase;
   font-family: 'Raleway';
+
 }
 
 .nav li:hover > ul.nav-content {
@@ -46,14 +47,16 @@ ul.nav li > a:hover {
   text-decoration: underline;
 }
 
-.nav li:hover > ul.nav-content::before {
-  content: " ";
+.nav li > ul.nav-content::before {
+  content: "";
   width: 0;
   height: 0;
-  border-left: 5px solid transparent;
-  border-right: 5px solid transparent;
-  border-bottom: 5px solid #000000;
+  border-left: 8px solid transparent;
+  border-right: 8px solid transparent;
+  border-bottom: 8px solid #000000;
   display: block;
+  position: absolute;
+  top:-10px;
 }
 
 .nav-content {
@@ -62,16 +65,17 @@ ul.nav li > a:hover {
   justify-content: center;
   width: 120px;
   height: 96px;
-  position: absolute;
+  position: relative;
   background-color: #000000;
   z-index: 1;
   margin-top: 25px;
 
   a {
-    padding: 0;
+    padding: 20px;
   }
 }
-ul.nav-content:hover{
+
+ul.nav-content:hover {
   display: flex;
 }
 
@@ -233,15 +237,19 @@ a {
   padding-left: 10px;
   padding-top: 10px;
 }
-.galleryh2::after{
+.images-to-hover:hover+h2{
+display: none;
+}
+
+.galleryh2::after {
   content: "";
   border: 4px solid #1fbba1;
   position: absolute;
   width: 138px;
   margin-top: 26px;
   left: 10px;
-
 }
+
 .galleryh2a {
   background-color: rgba(255, 255, 255, 0.3);
   font-family: 'Raleway';
@@ -258,14 +266,14 @@ a {
   padding-left: 10px;
   padding-top: 10px;
 }
-.galleryh2a::after{
+
+.galleryh2a::after {
   content: "";
   border: 4px solid #1fbba1;
   position: absolute;
   width: 138px;
   margin-top: 26px;
   left: 10px;
-
 }
 
 .gallery-article {
@@ -288,7 +296,7 @@ a {
 .inner-price-container {
   background-color: #f1f1f1;
   width: 1052px;
-  height: 611px;
+  height: 100%;
   padding-top: 100px;
 }
 
@@ -527,7 +535,7 @@ h2.price::after {
 textarea::placeholder {
   font-family: 'Raleway';
   color: #cacaca;
-  font-size: 33px;
+  font-size: 28px;
   font-weight: 300;
   line-height: 20px;
   text-align: left;
@@ -630,8 +638,11 @@ footer {
       text-align: left;
     }
 
-    img {
+    .footer-social {
       margin: 7px;
+      color: inherit;
+      padding-right: 0;
+      text-decoration: none;
     }
 
     p.footerSit {
